# aiofase

./: .gitignore  CHANGELOG.md  README.md  database.py  package-lock.json  pyproject.toml  sensor.py  setup.py
aiofase/: microservice.py  server.py
examples/: client.py  server.py  service_1.py  service_2.py
nodefase/: index.js  microservice.js
src/: aiofase.py  protocol.py
